[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["João Gomes <j.gomes@runtime-revolution.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.2.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
